--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,17 @@ android {
 
     defaultConfig {
         applicationId "com.example.wladek.pockeregapp"
+        generatedDensities = []
         minSdkVersion 9
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
+
+    aaptOptions {
+        additionalParameters "--no-version-vectors"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -28,4 +34,18 @@ dependencies {
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.afollestad.material-dialogs:commons:0.9.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.google.android.gms:play-services-appindexing:9.4.0'
+}
+
+afterEvaluate {
+    tasks.matching {
+        it.name.startsWith('dex')
+    }.each { dx ->
+        if (dx.additionalParameters == null) {
+            dx.additionalParameters = []
+        }
+        dx.additionalParameters += '--multi-dex'
+        dx.additionalParameters += "--main-dex-list=$projectDir/multidex.keep".toString()
+    }
 }
