--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.example.wladek.pockeregapp"
         generatedDensities = []
         minSdkVersion 9
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.android.gms:play-services-appindexing:9.4.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
 
 afterEvaluate {
